Changed label font size to fix alignment problem

--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -97,7 +97,7 @@ body {
 
 label {
   margin: .2em;
-  font-size: 1.2em;
+  font-size: 1em;
 }
 
 input[type="text"] {
